# bito

./: .RData  .Rhistory  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SConstruct  __init__.py.in  bito-cmake-env.yml  concepts.html  environment-extras.yml  environment.yml  genindex.html  get_rpath.py  index.html  indexers.txt  james.c  objects.inv  old_choice_map.cpp  py-modindex.html  pyproject.toml  rename.sh  results.nni_search.csv  run_tests_cmake.sh  search.html  searchindex.js  setup.py  setup.py.in  test_instance.py  test_mmap.c  test_sample.py  time.py  x
.github/: pull_request_template.md
.github/scripts/: conda_init.sh
.github/wip_workflows/: .build_with_cmake.yml  build_and_test_with_make.yml
.github/workflows/: .build_with_docker.yml  .build_with_make.yml  build-conda-env.yml  build-demo.yml  build-with-cmake.yml  build_and_test_with_make.yml  build_with_cmake.yml  build_with_docker.yml  build_with_make.yml  check_formatting.yml  run-fast-test.yml  run-tests-with-gcc-7.yml  run-tests.yml
_ignore/: .benchmark-em.py.swp  anolis.newick  anolis.nexus  benchmark-em.py  ds1-alpha0.0001-loop10-eps0-parameters.csv  ds1-alpha0.0001-loop10-eps0-score.csv  ds1-loop1000-elbo_trace.csv  ds1-loop1000-parameters.csv  ds4-alpha0.0001-loop10-eps0-parameters.csv  ds4-alpha0.0001-loop10-eps0-score.csv  ds7-alpha0.0001-loop10-eps0-child-count.csv  ds7-alpha0.0001-loop10-eps0-parameters.csv  ds7-alpha0.0001-loop10-eps0-score.csv  ds7-alpha0.0001-loop1000-eps0-parameters.csv  ds7-alpha0.0001-loop1000-eps0-score.csv  ds7-alpha0.0001-loop1000-eps1e-06-parameters.csv  ds7-alpha0.0001-loop1000-eps1e-06-score.csv  ebola_mb-alpha0.0001-loop100-eps0-score.csv  ebola_mb-alpha0.0001-loop5-eps0-score.csv  em-alpha0-loop1.csv  em-alpha0-loop23.csv  em-alpha0.3-loop1.csv  em-alpha0.3-loop7.csv  filesystem.hpp  mean.diff  mmapped_matrix.data  mmapped_plv.data  r-plotting.ipynb  simple-average.csv  test_file  test_mmap.c  test_mmap.cpp  v3cheng0.3-loop1.csv  v3cheng0.3-loop7.csv
_ignore/106/: alignment.cpp  alignment.hpp  beagle_accessories.hpp  bitset.hpp  block_model.cpp  block_specification.cpp  block_specification.hpp  driver.cpp  eigen_sugar.hpp  engine.cpp  engine.hpp  intpack.hpp  (+21 more)
_sources/: concepts.rst.txt
beagle-recipe/: meta.yaml
data/: 4-taxon-slice-of-ds1.fasta  5-taxon-hybrid-marginal-only-rootward-uncertainty-alt.nwk  5-taxon-hybrid-marginal-only-rootward-uncertainty.nwk  5-taxon-only-rootward-uncertainty.nwk  5-taxon-slice-of-ds1.fasta  7-taxon-slice-of-ds1.fasta  DS1.100_topologies.nwk  DS1.BEAST.trees  DS1.fasta  DS1.subsampled_10.t  DS1.subsampled_10.t.nwk  DS1.subsampled_10.t.reordered  DS1.subsampled_10.t_support.json  README.md  ds1-reduced-5.fasta  ds1-reduced-5.gp-branch-lengths.unrooted.nwk  ds1-reduced-5.nwk  ds1_3trees.nwk  five_taxon.fasta  five_taxon.tre  five_taxon_rooted.nwk  five_taxon_rooted_more.nwk  five_taxon_rooted_more_2.nwk  five_taxon_rooted_more_3.nwk  five_taxon_rooted_shuffled.nwk  five_taxon_support.json  five_taxon_tree1.nwk  five_taxon_tree2.nwk  five_taxon_trees_3_4.nwk  five_taxon_trees_3_4_diff_branches.nwk  five_taxon_unrooted_with_branch_lengths.nwk  fluA.fa  fluA.tree  four-numbered-taxa.fasta  four-taxon-two-tree-rootsplit-uncertainty.nwk  four_taxon.fasta  four_taxon.tre  four_taxon_simple_after_nni.nwk  four_taxon_simple_before_nni_1.nwk  four_taxon_simple_before_nni_2.nwk  (+40 more)
doc/: concepts.rst  conf.py  index.rst
doctest/: alignment.hpp  bitset.hpp  block_specification.hpp  combinatorics.hpp  csv.hpp  default_dict.hpp  doctest.h  doctest_include_unit_tests.hpp  driver.hpp  eigen_sugar.hpp  gp_doctest.cpp  gp_engine.hpp  intpack.hpp  mmapped_matrix.hpp  mmapped_plv.hpp  nni_operation.hpp  node.hpp  numerical_utils.hpp  pv_handler.hpp  reindexer.hpp  rooted_sbn_instance.hpp  rooted_tree.hpp  sankoff_handler.hpp  sankoff_matrix.hpp  sbn_maps.hpp  sbn_probability.hpp  site_model.hpp  site_pattern.hpp  stick_breaking_transform.hpp  stopwatch.hpp  subsplit_dag_node.hpp  substitution_model.hpp  task_processor.hpp  taxon_name_munging.hpp  tidy_subsplit_dag.hpp  topology_sampler.hpp  tree_collection.hpp  unrooted_sbn_instance.hpp  unrooted_tree.hpp
extras/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.cpp.bak  noodle.cpp  reps_and_likelihoods.cpp  reps_and_likelihoods.hpp
include/: sbn.h
modules/: bito.beagle_flags.html  bito.html  libsbn.PSPIndexer.html  libsbn.beagle_flags.html  libsbn.html  libsbn.instance.html  vip.benchmark.html  vip.branch_model.html  vip.burrito.html  vip.cli.html  vip.html  vip.optimizers.html  vip.priors.html  vip.sbn_model.html  vip.scalar_model.html  vip.sgd_server.html
notebooks/: 2019-10-02-demo.ipynb  benchmark.ipynb
python/: 2019-09-12-tf-gradient.ipynb  2019-09-12.ipynb  2019-09-14-interface.ipynb  2019-09-27-mb.ipynb  _test_distributions.py  branch_length.py  continuous_parameter_models.py  distributions.py  optimizers.py  play.ipynb  test_distributions.py
src/: CMakeLists.txt  CONTRIBUTORS.md  ProgressBar.hpp  REMOVE_THIS.cpp  alignment.cpp  alignment.hpp  alphabet.hpp  argsort_vector.hpp  basic_graph.hpp  beagle.cpp  beagle.hpp  beagle_accessories.hpp  beagle_flag_names.hpp  bitset.cpp  bitset.hpp  blerg.cpp  block_model.cpp  block_model.hpp  block_specfication.hpp  block_specification.cpp  block_specification.hpp  build.cpp  build.hpp  choice_map.cpp  choice_map.hpp  clock_model.cpp  clock_model.hpp  combinatorics.cpp  combinatorics.hpp  csv.cpp  csv.h  csv.hpp  dag_branch_handler.cpp  dag_branch_handler.hpp  dag_branch_lengths.cpp  dag_branch_lengths.hpp  dag_data.hpp  dag_node.cpp  dag_node.hpp  default_dict.hpp  (+189 more)
test/: nni_search.py  results.nni_search.csv  test.c  test.cpp  test_bito.py  test_grad.py  test_instance.py  test_libsbn.py  test_nni_search.py  test_phyloflags.py
vip/: benchmark.py  branch_model.py  burrito.py  cli.py  continuous_models.py  continuous_parameter_models.py  optimizers.py  priors.py  sbn_model.py  scalar_model.py  scalar_models.py  sgd_server.py  utils.py
(+52 files in other folders)
